Removed extra margin around social icons. Fixes #450.

--- a/wp-content/themes/glp/less/nav-main.less
+++ b/wp-content/themes/glp/less/nav-main.less
@@ -49,7 +49,7 @@
 						}
 					a {
 						display: inline-block;
-						margin: 5px 0 5px;
+						margin: 5px 0 0;
 						height: 32px; width: 32px;
 						text-indent: 9999px;
 						overflow: hidden;
